# pi-ocarina

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  components.json  cosmos.config.json  cosmos.decorator.tsx  eslint.config.js  eslint.config.ts  index.html  jsconfig.json  package.json  tsconfig.json  tsconfig.tools.json  vite.config.js  vite.config.ts  wdio.conf.js  wdio.conf.ts
.github/: copilot-instructions.md
.pi/: settings.json
.pi/prompts/: caveman-sonata.md  retrofit-sonata.md
.scratch/pi-gui-tauri-parity/: audit.md  flows.md
.sonata/: large-files.txt  manifest.json
agent-host/: package.json  tsconfig.build.json  tsconfig.json
agent-host/src/: host.js  host.ts  orchestration.js  orchestration.ts  session-coexistence.js  session-coexistence.ts  supervision.js  supervision.ts
agent-host/test/: orchestration.test.js  orchestration.test.ts  packaged-runtime.test.js  (+5 more)
config/: README.md
docs/: agent-targets.md  core-beliefs.md  development.md  index.md  issue-tracker.md  project-brief.md  quality.md  testing.md
scripts/: audit-parity.mjs  audit-parity.mts  check-context.sh  check-file-size.sh  check-sonata.sh  setup-context.sh  test-packaged-macos.sh
src/: App.jsx  App.tsx  README.md  main.jsx  main.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.e2e.conf.json
src-tauri/capabilities/: default.json  e2e.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_host.rs  app_state.rs  attachment.rs  lib.rs  main.rs  model_scope.rs  review.rs  system_fonts.rs  terminal.rs  workspace.rs  worktree.rs
tests/: README.md
(+263 files in other folders)
