[package]
name = "pi-ocarina"
version = "0.1.0"
description = "A Tauri desktop home for the Pi coding agent"
edition = "2021"
rust-version = "1.77.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-wdio = "1.2.0"
tauri-plugin-wdio-webdriver = "1.2.0"
