[package]
name = "pi-ocarina"
version = "0.1.0"
description = "A Tauri desktop home for the Pi coding agent"
edition = "2021"
rust-version = "1.77.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
portable-pty = "0.9.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-wdio = "1.2.0"
tauri-plugin-wdio-webdriver = "1.2.0"
url = "2"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["std", "NSFontManager"] }

[dev-dependencies]
tempfile = "3"
